# Stowage_EX3

./: .gitignore  bonus.txt  readme.txt
Algorithm/: AbstractAlgorithm.h  AlgorithmRegistration.cpp  AlgorithmRegistration.h  CMakeLists.txt  NaiveAlgorithm.cpp  NaiveAlgorithm.h  NaiveAlgorithm1.cpp  NaiveAlgorithm1.h  NaiveAlgorithm2.cpp  NaiveAlgorithm2.h  _208967075_a.cpp  _208967075_a.h  _208967075_b.cpp  _208967075_b.h  _208967075_c.cpp  _208967075_c.h  chen_makefile  makefile
Common/: AlgorithmRegistration.h  Container.cpp  Container.h  Floor.cpp  Floor.h  Operation.cpp  Operation.h  Position.cpp  Position.h  Reader.cpp  Reader.h  ShipPlan.cpp  ShipPlan.h  ShipRoute.cpp  ShipRoute.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h
Simulation/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  AlgorithmRegistration.cpp  Auxillary.cpp  CMakeLists.txt  Crane.cpp  Crane.h  CraneAux.cpp  Simulation.cpp  Simulation.h  main.cpp  makefile
algorithm/: BaseAlgorithm.cpp  BaseAlgorithm.h  CMakeLists.txt  NaiveAlgorithm.cpp  NaiveAlgorithm.h  _208967075_a.cpp  _208967075_a.h  _208967075_b.cpp  _208967075_b.h  makefile
bonus/: _208967075_c.h  makefile
common/: Floor.cpp  Floor.h  Position.cpp  Position.h  Reader.cpp  Reader.h  ShipPlan.cpp  ShipPlan.h  ShipRoute.cpp  ShipRoute.h  WeightBalanceCalculator.h
new_travels/high floors/: ship_plan.ship_plan
output/: simulation.errors  simulation.results
simulator/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  AlgorithmRegistration.cpp  Auxiliary.cpp  Auxillary.cpp  CMakeLists.txt  Crane.cpp  Crane.h  CraneAux.cpp  Simulation.cpp  Simulation.h  Stowage.h  ThreadPool.cpp  ThreadPool.h  WeightBalanceCalculator.cpp  main.cpp  makefile
test/complex/: ESBCN_0.cargo_data  ESBCN_1.cargo_data
test/invalid_travel/: a.ship_plan
test/long_travel/: ABCDE_1.cargo_data  ABCDE_2.cargo_data  ABCDF_1.cargo_data  ABCDJ_1.cargo_data  some.route  some.ship_plan
test/short_travel/: ABCDE_1.cargo_data  ABCDF_1.cargo_data  a.route  some.ship_plan
travels/: description.txt
travels/travels_13/: description.txt
